Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/PedidoIntegradora__c.object-meta.xml
<CustomObject>
    <label>Pedido de integradora</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nome de Pedido de integradora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos de integradora</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>