Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/AprovadoParcial__c.field-meta.xml
<CustomField>
    <fullName>AprovadoParcial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Parcial</label>
    <type>Checkbox</type>
</CustomField>