Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos de integradora</relationshipLabel>
    <relationshipName>PedidosIntegradora</relationshipName>
    <type>Lookup</type>
</CustomField>