Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/CNPJCliente__c.field-meta.xml
<CustomField>
    <fullName>CNPJCliente__c</fullName>
    <label>CNPJ do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>