Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/CodigoIntegradora__c.field-meta.xml
<CustomField>
    <fullName>CodigoIntegradora__c</fullName>
    <externalId>true</externalId>
    <label>Código integradora</label>
    <length>50</length>
    <type>Text</type>
</CustomField>