Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/EnviadoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>EnviadoAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado aprovação</label>
    <type>Checkbox</type>
</CustomField>