Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/MotivoReprovacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoReprovacao__c</fullName>
    <label>Motivo da reprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>