Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos de integradora</relationshipLabel>
    <relationshipName>PedidosIntegradora</relationshipName>
    <type>Lookup</type>
</CustomField>