Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/RejeicaoProcesso__c.field-meta.xml
<CustomField>
    <fullName>RejeicaoProcesso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejeição processo</label>
    <type>Checkbox</type>
</CustomField>