Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando análise</fullName>
            </value>
            <value>
                <fullName>Aguardando confirmação do Protheus</fullName>
            </value>
            <value>
                <fullName>Erro de integração</fullName>
            </value>
            <value>
                <fullName>Pedido gerado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Aprovado na integradora</fullName>
            </value>
            <value>
                <fullName>Reprovado na integradora</fullName>
            </value>
            <value>
                <fullName>Aguardando envio de cancelamento</fullName>
            </value>
            <value>
                <fullName>Aguardando aprovação comercial</fullName>
            </value>
            <value>
                <fullName>Aprovado comercial</fullName>
            </value>
            <value>
                <fullName>Reprovado comercial</fullName>
            </value>
            <value>
                <fullName>Aguardando confirmação de cancelamento</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>