Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status de aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>