Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/fields/TipoIntegradora__c.field-meta.xml
<CustomField>
    <fullName>TipoIntegradora__c</fullName>
    <label>Tipo integradora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>