Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/recordTypes/PedidoFluxoAutomatico.recordType-meta.xml
<RecordType>
    <fullName>PedidoFluxoAutomatico</fullName>
    <active>true</active>
    <label>Pedido de fluxo automático</label>
</RecordType>