Git Tests/force-app/main/default/default/objects/PedidoIntegradora__c/recordTypes/PedidoFluxoManual.recordType-meta.xml
<RecordType>
    <fullName>PedidoFluxoManual</fullName>
    <active>true</active>
    <label>Pedido de fluxo manual</label>
</RecordType>